[package]
name = "apig_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
# axum-test-helper = "0.1.1"
tower = "0.4"
hyper = "0.14"
mime = "0.3"

[dependencies]
temporal-sdk-helpers = {path = "../temporal-sdk-helpers"}

# HTTP Server
axum = {git = "https://github.com/tokio-rs/axum", features = ["macros"], rev = "7caa4a3"}
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = {version = "0.3.4", features=["trace"]}

# Serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Enum Utils
strum = {version="0.24", features=["derive"]}

# Error utils
anyhow = {version = "1.0", features = ["backtrace"]}

# Slack
slack-morphism = "1.14.0"

# .env vars
config = { version = "0.13.2", features = ["ini"] }