[package]
edition = "2021"
name = "temporal_json"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.14", default-features = false, features = ["napi4"] }
napi-derive = "2.10.1"
temporal-json = {path = "../temporal-json", features = ["js"]}

anyhow = {version = "1.0"}

[build-dependencies]
napi-build = "2.0.1"

