[package]
name = "temporal-json-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "saxorg_temporal_json"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["abi3-py37"] }
temporal-json = {path = "../temporal-json", features = ["python"]}

[build-dependencies]
pyo3-build-config = {version = "0.18.1", features = ["abi3-py37"]}