[package]
name = "temporal-json"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}

# Serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Enum Utils
strum = {version = "0.24", features = ["derive"]}


## exporting to other languages
# python
pyo3 = {version = "0.18.0", optional = true}
# js
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.14", default-features = false, features = ["napi4"], optional = true }
napi-derive = {version = "2.10.1", optional = true}


[features]
default = []
python = ["dep:pyo3"]
js = ["dep:napi", "dep:napi-derive"]