[package]
name = "temporal-sdk-helpers"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}
temporal-client = { git = "https://github.com/temporalio/sdk-core", rev = "8b50b7c" }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core", rev = "8b50b7c" }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core", rev = "8b50b7c" }
url = "2.3.1"
uuid = "1.1.2"

# Serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Enum Utils
strum = {version = "0.24", features = ["derive"]}

once_cell = "1.16"

temporal-json = { path="../temporal-json"}