[package]
name = "toolbox"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", features = ["derive"] }
anyhow = {version = "1.0", features = ["backtrace"]}
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
serde_json = "1.0"